feat: Map payment in user and apartment
