# src/main/resources/swagger.yaml
@@ -3,11 +3,8 @@ info:
   title: Condominium management
   description: |
   version: 1.0.0
-externalDocs:
-  description: Find out more about Swagger
-  url: http://swagger.io
 servers:
-  - url: http://localhost:8080/api/v1
+  - url: http://localhost:8080
 tags:
   - name: Condominium management
     description: Basic CRUD operations for persist data about the condominium management
@@ -34,7 +31,7 @@ paths:
                 $ref: '#/components/schemas/UserResponse'
         '400':
           description: Bad request
-  /user/send-proof/{apartmentNumber}:
+  /apartment/send-proof/{apartmentNumber}:
     post:
       summary: "Upload de comprovante de pagamento"
       parameters:
@@ -44,7 +41,10 @@ paths:
           description: "Número do apartamento para o qual o comprovante será enviado"
           schema:
             type: string
+      description: Send payment proof
+      operationId: sendProofPayment
       requestBody:
+        description: Send image where it is the payment proof
         required: true
         content:
             multipart/form-data:
